# aoc2020

./: .pre-commit-config.yaml  pyproject.toml
day1/: part1.py  part2.py
day10/: part1.py  part2.py
day11/: part1.py  part2.py  part2_bak.py
day12/: part1.py  part2.py
day13/: part1.py  part2.py  sample_input.txt  sample_input2.txt
day14/: part1.py  part2.py
day15/: part1.py
day16/: part1.py  part2.py
day2/: part1.py  part2.py
day3/: part1.py  part2.py
day4/: part1.py  part2.py
day5/: part1.py  part2.py
day6/: out  part1.py  part2.py
day7/: part1.py  part2.py
day8/: part1.py  part2.py
day9/: part1.py  part2.py
