[tool.poetry]
name = "aoc2020"
version = "0.1.0"
description = ""
authors = ["Ben Plotnick <ben.plotnick@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.19.4"

[tool.poetry.dev-dependencies]
ipython = "^7.19.0"
ipdb = "^0.13.4"
jupyter = "^1.0.0"
pre-commit = "^2.9.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
